# LLM-playground

./: main.py  pyproject.toml
01_summarize_paper/: summarize.py
02_STT/: STT_local.ipynb  speaker_diarization.ipynb  youtube_to_file.ipynb
03_get_time/: get_functions.py  get_time_terminal.py
04_Text2SQL/: text2sql.ipynb  text2sql.py
05_finance_stock/: stock_info_streamlit.py  tools.py
06_chat_bot/: test.ipynb
utils/: graphs.py  langsmith.py  messages.py
