[project]
name = "do-it-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "google>=3.0.0",
    "google-genai>=1.52.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.3",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.5",
    "logging>=0.4.9.6",
    "openai>=2.9.0",
    "pyannote-audio>=3.1.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "pytube>=15.0.0",
    "streamlit>=1.52.2",
    "tabulate>=0.9.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "watchdog>=6.0.0",
    "yfinance>=1.0",
    "yt-dlp>=2025.11.12",
]

[dependency-groups]
dev = []
